[package]
name = "backlog-client"
version = "0.1.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "2.0.14"
url = "2.5"
dotenv = "0.15"
